<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editSub_billing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignLeft="@+id/editLiters"
        android:layout_alignStart="@+id/editLiters"
        android:width="100dp"
        android:ems="10"
        android:inputType="number"
        android:text="555"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="46dp"
        android:text="@string/sub_billing"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liters"
        android:layout_alignBaseline="@+id/editLiters"
        android:layout_alignBottom="@+id/editLiters"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8" />

    <TextView
        android:id="@+id/textPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:layout_alignBaseline="@+id/editPrice"
        android:layout_alignBottom="@+id/editPrice"
        android:layout_alignRight="@+id/textView9"
        android:layout_alignEnd="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dp"
        android:text="@string/combustion"
        android:layout_below="@+id/editPrice"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dp"
        android:text="@string/avg_seppd"
        android:layout_below="@+id/editCombustion"
        android:layout_alignLeft="@+id/textPrice"
        android:layout_alignStart="@+id/textPrice" />

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editAvgSpeed"
        android:layout_alignStart="@+id/editAvgSpeed"
        android:layout_below="@+id/editLiters"
        android:width="100dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="4.51"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editPetrolStation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editAvgSpeed"
        android:layout_alignStart="@+id/editAvgSpeed"
        android:layout_below="@+id/editAvgSpeed"
        android:width="100dp"
        android:ems="10"
        android:inputType="text"
        android:text="BP BB Żywiecka"
        android:textSize="14sp"
        tools:text="@string/station" />

    <EditText
        android:id="@+id/editAvgSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnAdd"
        android:layout_alignRight="@+id/btnAdd"
        android:layout_below="@+id/editCombustion"
        android:width="100dp"
        android:ems="10"
        android:inputType="number"
        android:text="39"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editCombustion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editPrice"
        android:layout_alignStart="@+id/editPrice"
        android:layout_below="@+id/editPrice"
        android:width="100dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="7.8"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editLiters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editPrice"
        android:layout_alignStart="@+id/editPrice"
        android:layout_below="@+id/editSub_billing"
        android:width="100dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="43"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnAdd"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:onClick="btnClick"
        android:text="@string/add"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/petrol_station"
        android:layout_alignBaseline="@+id/editPetrolStation"
        android:layout_alignBottom="@+id/editPetrolStation"
        android:layout_alignLeft="@+id/textPrice"
        android:layout_alignStart="@+id/textPrice" />

</RelativeLayout>